# Lisp-haskell

./: .editorconfig  LICENSE  README.md  cabal.project  input.scm  lisp-hs.cabal
exe/: Main.hs
interpreter-tests/: Main.hs
interpreter-tests/data/arithmetic/: golden  input
interpreter-tests/data/cond/: golden  input
interpreter-tests/data/function-call/: golden  input
interpreter-tests/data/helloworld1/: input
interpreter-tests/data/identifier/: input
interpreter-tests/data/if/: golden  input
interpreter-tests/data/lambda/: golden  input
interpreter-tests/data/map/: golden  input
src/Language/Lisp/: CodeGen.hs  Error.hs  Interpreter.hs  Parser.hs  Type.hs  Util.hs
src/Language/Lisp/Semantic/: Analyser.hs  Type.hs
tests/: Main.hs
