cabal-version:   3.0
name:            lisp-hs
version:         0.1.0.0

-- synopsis:
-- description:
license:         GPL-3.0-only
license-file:    LICENSE
author:          Gang
maintainer:      gxw991@student.bham.ac.uk

-- copyright:
category:        Language
build-type:      Simple
extra-doc-files: CHANGELOG.md

-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:
        Language.Lisp.Error
        Language.Lisp.Parser
        Language.Lisp.Type

    -- other-modules:
    -- other-extensions:
    build-depends:
        , base        ^>=4.18.0.0
        , containers
        , megaparsec
        , mtl
        , text

    -- , llvm-hs
    -- , llvm-hs-pure
    hs-source-dirs:   src
    default-language: GHC2021

executable lisp-hs
    import:           warnings
    main-is:          Main.hs

    -- other-modules:
    -- other-extensions:
    build-depends:
        , base     ^>=4.18.0.0
        , lisp-hs

    hs-source-dirs:   exe
    default-language: GHC2021

test-suite lisp-hs-test
    import:           warnings
    default-language: GHC2021

    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   tests
    main-is:          Main.hs
    build-depends:
        , base            ^>=4.18.0.0
        , lisp-hs
        , megaparsec
        , random
        , raw-strings-qq
        , tasty
        , tasty-golden
        , tasty-hunit
        , text
